--- a/index.html
+++ b/index.html
@@ -19,45 +19,12 @@
     <link href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700' rel='stylesheet' type='text/css'>
     <!-- jQuery -->
    <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-   <!--script src="js/jquery.js"></script!-->
+   <script src="js/jquery.js"></script>
    <script>
 var jsonArray;
 var count = 0;
 var debug_mobile = "desktop";
-function showDrivers(lat, lon) {
-    console.log("showDrivers" + lat);
-    var resp = JSON.parse("[{\"app\": \"AyeAuto\", \"userType\": \"driver\", \"online\": true, \"fLon\": \"\", \"id\": 7, \"statistics\": \"count_MainBtnPress:25,count_PhoneBtnPress:0,incomingSearchNotifications:0,lastTimeOfUse:1504254224588\", \"from\": \"\", \"img\": \"http://s3.eu-central-1.amazonaws.com/bubcontacts/thumb_images/profile_sample.jpg\", \"lon\": 75.781433, \"fare_list\": \"\", \"to\": \"\", \"pickup\": false, \"tLon\": \"\", \"booked_status\": \"open\", \"confirm_to\": \"\", \"duration_aprx\": \"\", \"tLat\": \"\", \"db_set_time\": 0, \"pick_from\": \"\", \"distance_aprx\": \"\", \"hk\": \"test000007\", \"bbox\": [75.7828053, 11.2958606, 75.7828053, 11.2958606], \"in_call\": false, \"lat\": 11.2973647, \"number_plate\": \"KL-11-B-764\", \"fLat\": \"\", \"phone\": \"9895925028\", \"place\": \"Regal theater\", \"loc_time\": 1508513310967, \"acu\": 28.1000003815, \"activity\": \"active\", \"gtype\": 1}, {\"loc_time\": 1506958276834, \"statistics\": \"count_MainBtnPress:3,count_PhoneBtnPress:0,incomingSearchNotifications:2,lastTimeOfUse:1505229208635\", \"img\": \"http://s3.eu-central-1.amazonaws.com/bubcontacts/thumb_images/profile_sample.jpg\", \"phone\": \"9895925028\", \"online\": \"offline\", \"app\": \"AyeAuto\", \"in_call\": false, \"lon\": 75.786701, \"fare_list\": \"\", \"id\": 0, \"userType\": \"driver\", \"hk\": \"test000006\", \"booked_status\": \"open\", \"bbox\": [75.7828053, 11.2958579, 75.7828053, 11.2958579], \"acu\": 23.6000003815, \"activity\": \"active\", \"lat\": 11.298416, \"place\": \"Malikadavu\", \"gtype\": 1, \"number_plate\": \"KL-11-BE-1624\", \"confirm_to\": \"test000003\"}, {\"app\": \"AyeAuto\", \"userType\": \"driver\", \"online\": true, \"fLon\": \"\", \"id\": 8, \"statistics\": \"count_MainBtnPress:0,count_PhoneBtnPress:0,incomingSearchNotifications:0,lastTimeOfUse:1501937646640\", \"from\": \"\", \"img\": \"http://s3.eu-central-1.amazonaws.com/bubcontacts/thumb_images/profile_sample.jpg\", \"lon\": 75.7828067, \"fare_list\": \"\", \"to\": \"\", \"pickup\": false, \"tLon\": \"\", \"booked_status\": \"open\", \"confirm_to\": \"\", \"duration_aprx\": \"\", \"tLat\": \"\", \"db_set_time\": 0, \"pick_from\": \"\", \"distance_aprx\": \"\", \"hk\": \"test000001\", \"bbox\": [75.78238166666667, 11.287148333333334, 75.78238166666667, 11.287148333333334], \"in_call\": false, \"lat\": 11.2958647, \"number_plate\": \"KL-11-AD-6585\", \"fLat\": \"\", \"phone\": \"9895925028\", \"place\": \"easthill,kozhikode\", \"loc_time\": 1507795981817, \"acu\": 20, \"activity\": \"active\", \"gtype\": 1}]");
-    //$.getJSON('http://ayeauto.live/markerResp1.html', function (autos) {
-    //$.getJSON('http://aproxy.noip.me/api?latitude=' + lat + '&longitude=' + lon + '&rad=10.0&type=driver', function (autos) {
-	//console.log("autos:"+autos);
-        //for (auto of resp) {
-	//console.log("autos:"+auto.app);
-	//debug_mobile = resp.length+"<>";
-        //}
-	//var jsonArray=JSON.parse(autos);
-	jsonArray.forEach(myFunction);
-//debug_mobile = resp+"<>";
-    //});
-}
 
-$.getJSON('https://ayeauto.live/markerResp1.html', function (autos) {
-    //$.getJSON('http://aproxy.noip.me/api?latitude=' + lat + '&longitude=' + lon + '&rad=10.0&type=driver', function (autos) {
-	console.log("autos:"+autos);
-        //for (auto of resp) {
-	//console.log("autos:"+auto.app);
-	//debug_mobile = resp.length+"<>";
-        //}
-	jsonArray=JSON.parse(autos);
-	//jsonArray.forEach(myFunction);
-//debug_mobile = resp+"<>";
-    });
-
-function myFunction(value) {
-   console.log("autos:"+value.app);
-  debug_mobile = debug_mobile + value.lat + "<br>";
-}
-   showDrivers(1.2,12.2);
-   //var debug_mobile = "desktop";
    var hosta = window.location.protocol+"7";
 	var isMobile = /iPhone|iPad|iPod|Android/i.test(navigator.userAgent);
 	if (isMobile) {
